--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="films" id="Kollywood">
                 <div>
-                    <a href="">
+                    <a href="gharjwai.html">
                         <img src="gharjwai.png" alt="">
                     </a>
                 </div>
