--- a/duinumbari.html
+++ b/duinumbari.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Dui Numberi</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="duinumbari.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/lgnmYWl26SY?si=zJz2otK6cm-A0xee">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Dui Numberi
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Drama | 2h 4m | 21 Asoj,2079
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">Two friends Himal and Chhiring are amateur hunters. They do not have big dreams in their lives. But Himal has to fulfill his girlfriend Balika's dream, and for that he crosses the line of ethics. Meanwhile a stranger girl Ugyen's entry to the village changes the atmosphere of Chhiring's mindscape.
+                    </p>
                 </details>
                 <br><br>
                 <details>
                     <summary class="title">CAST</summary>
                     <ul>
                         <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Saugat Malla</li>
+                        <li>Upasasna Singh Thakuri</li>
+                        <li>Ugyen Choden</li>
+                        <li>Buddhi Tamang, etc.</li>
                     </ul>
                 </details>               
             </div>
