--- a/degreemaila.html
+++ b/degreemaila.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Degree Maila (MA 3rd CLASS)</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="degreemaila.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/4ohVTa35SaE?si=yidStx8yOAN4VVUf">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Degree Maila (MA 3rd CLASS)
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Comedy, Drama, Romance | 2h 30m | 13 Chaitra,2080
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">"Degree Maila" unfolds as a captivating comic tale that delves into the life of a man on a quest to find his place in society while longing for love and recognition. Amidst a whirlwind of trials and errors, he revolts against societal expectations and surrenders to personal aspirations that define his journey.
+                    </p>
                 </details>
                 <br><br>
                 <details>
                     <summary class="title">CAST</summary>
                     <ul>
                         <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Anchal Sharma</li>
+                        <li>Kamal Mani Nepal</li>
+                        <li>Shekhar Chapagain</li>
+                        <li>Hiuwala Gautam, etc.</li>
                     </ul>
                 </details>               
             </div>
