--- a/fullbari.html
+++ b/fullbari.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Fulbari</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="fullbari.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/gBM4IwixICg?si=Cr198PdQQ3eIZSku">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Fulbari
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Drama, Family | 2h 10m | 5 Falgun,2079
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">A family is challenged by a mother's health condition and the three grown sons are too busy with their own lives to truly be there for their mom and dad.
+                    </p>
                 </details>
                 <br><br>
                 <details>
                     <summary class="title">CAST</summary>
                     <ul>
+                        <li>Bipin Karki</li>
+                        <li>Aruna Karki</li>
                         <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Gaumaya Gurung</li>
+                        <li>Priyanka Karki, etc.</li>
                     </ul>
                 </details>               
             </div>
