--- a/jaari.html
+++ b/jaari.html
@@ -3,32 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Jaari</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="jaari.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/kQZq8KrtQJ0?si=MRX6pgYpSz_6Y5IE">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Jaari
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Drama, Romance | 2h 1m | 1 Baishak,2080
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">Set in the year 1995, after day-to-day arguments and fights between Namsang (Dayahang Rai) and his wife Hangma (Miruna Magar), she goes back to her parents house. She elopes with another man (Roydeep Shrestha), but eventually comes back to her husband Namsang when her family is not able to pay him compensation (Jaari) for her elopement. Hangma decides to pay it herself, but this time as his maid, since she cannot afford to pay any other form of compensation to him. The plot revolves around the struggles of Hangma in a male-dominated society.
+                    </p>
                 </details>
                 <br><br>
                 <details>
@@ -36,9 +37,9 @@
                     <ul>
                         <li>Dayahang Rai</li>
                         <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Pushkar Gurung</li>
+                        <li>Kamal Mani Nepal</li>
+                        <li>Upasanba Nembang, etc.</li>
                     </ul>
                 </details>               
             </div>
