--- a/mahapurush.html
+++ b/mahapurush.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Mahapurush</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="mahapurush.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/u4Vc3EnXhZg?si=JpXk1RG6Wf2jfFyL">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Mahapurush
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Comedy, Drama | 2h 31m | 11 Kartik,2079
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">The story is about a single father who lost his wife years ago; he now lives with his two sons. He falls in love in a later stage of his life. As a result, he must deal with family and social issues, since the idea of getting married at such an age is not a common phenomenon in society and is considered taboo.
+                    </p>
                 </details>
                 <br><br>
                 <details>
                     <summary class="title">CAST</summary>
                     <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Hari Bamsha Acharya</li>
+                        <li>Madan Krishna Shrestha</li>
+                        <li>Gauri Malla</li>
+                        <li>Arun Chhetri</li>
+                        <li>Rabindra Singh Baniya, etc.</li>
                     </ul>
                 </details>               
             </div>
