--- a/modibeni.html
+++ b/modibeni.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Modibeni</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="modibeni.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/XluyYXRxXVw?si=KldRmC2JlZ5EETCy">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Modibeni
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Drama, Romance, Thriller | 2h 10m | 18 Shrawan,2081
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">In the lush forests, Modibeni encounters Raju (played by Praveen Khatiwada), a mysterious stranger. Their chance meeting sparks an unexpected romance, and they embark on a journey of love and self-discovery. However, societal norms and family expectations threaten their relationship.
+                    </p>
                 </details>
                 <br><br>
                 <details>
                     <summary class="title">CAST</summary>
                     <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
+                        <li>Barsha Siwakoti</li>
+                        <li>Amar Pratap Shrestha</li>
+                        <li>Prabin Khatiwada</li>
+                        <li>Saroj Khanal</li>
+                        <li>Rejine Upetri, etc.</li>
                     </ul>
                 </details>               
             </div>
