--- a/nangogaun.html
+++ b/nangogaun.html
@@ -3,32 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gharjwai</title>
+    <title>Nango Gaun</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="poster">
-            <img src="gharjwai.png" alt="">
+            <img src="nango gaun.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/FKTLPAzZ44U?si=Gl46H7o_2Auwu3Cv">
                     <button>Watch Now</button>
                 </a>
             </div>
         </div>
         <div id="details">
             <div id="title">
-                Gharjwai
+                Nango Gaun
             </div><br>
             <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
+                Drama, Political | 2h 5m | 19 Bhadra,2080
             </div>
             <br><br>
             <div id="explain">
                 <details>
                     <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
+                    <p id="plot">“Nango Gaun” is a gripping tale that sheds light on the relentless battle between corruption and honor, set against the picturesque backdrop of a small Nepali village. Jari Lama (Shishir Bangdel) has been blazing as a corrupt politician in a small village in Kavre for years. The locals are fed up with the politician’s current social standing and dominating manner. To put a stop to Jari’s political career, the villagers push Pasang (Dayahang Rai), a trustworthy and dedicated schoolteacher in the village, to enter politics and bring about change. Politics is not an ordinary subject for Pasang, and as a result, he prefers not to be a part of it. However, with the backing of the locals and the political establishment, he enrolls to make as many amendments as he can.
+                    </p>
                 </details>
                 <br><br>
                 <details>
@@ -36,8 +37,8 @@
                     <ul>
                         <li>Dayahang Rai</li>
                         <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
+                        <li>Karma Shakya</li>
+                        <li>Samragyee RL Shah</li>
                         <li>Shishir Bangdel, etc.</li>
                     </ul>
                 </details>               
