--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </button>
                 <datalist id="movielist">
                     <option value="Bato"></option>
+                    <option value="Chadke"></option>
                     <option value="Chadke 2"></option>
                     <option value="Dakini"></option>
                     <option value="Dal Bhat Tarkari"></option>
@@ -73,12 +74,12 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="nangogaun.html">
                         <img src="nango gaun.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="jaari.html">
                         <img src="jaari.png" alt="">
                     </a>
                 </div>
@@ -88,47 +89,57 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="duinumbari.html">
                         <img src="duinumbari.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="degreemaila.html">
                         <img src="degreemaila.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="bato.html">
                         <img src="bato.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="chadke2.html">
                         <img src="chadke2.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
-                        <img src="fullbari.png" alt="">
+                    <a href="chadke.html">
+                        <img src="chadke.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="fullbari.html">
+                        <img src="fullbari.png" alt="">
+                    </a>
+                </div>
+                 <div>
+                    <a href="hari.html">
+                        <img src="hari.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="mahapurush.html">
                         <img src="mahapurush.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="modibeni.html">
                         <img src="modibeni.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="dalbhattarkari">
                         <img src="dalbhattarkari.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="prasad.html">
                         <img src="prasad.png" alt="">
                     </a>
                 </div>
