--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="guleli.html">
                         <img src="guleli.png" alt="">
                     </a>
                 </div>
