--- a/gharjwai.html
+++ b/gharjwai.html
@@ -12,7 +12,7 @@
         <div id="poster">
             <img src="gharjwai.png" alt="">
             <div id="btnbox">
-                <a href="">
+                <a href="https://youtu.be/E4IhWK1459M?si=gEk3R0gMhiQKNnC3">
                     <button>Watch Now</button>
                 </a>
             </div>
