--- a/index.html
+++ b/index.html
@@ -262,5 +262,12 @@
  </div> 
  <script src="index.js">
  </script> 
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(() => console.log('Service Worker registered!'))
+      .catch(error => console.error('Service Worker registration failed:', error));
+  }
+</script>
 </body>
 </html>
