--- a/index.html
+++ b/index.html
@@ -171,32 +171,32 @@
             </div>
             <div class="films" id="Bollywood">
                 <div>
-                    <a href="">
+                    <a href="deva.html">
                         <img src="deva.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="live.html">
                         <img src="live.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="kgf2.html">
                         <img src="kgf2.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="kgf1.html">
                         <img src="kgf1.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="salaar.html">
                         <img src="salaar.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="leo.html">
                         <img src="leo.png" alt="">
                     </a>
                 </div>
