--- a/deva.html
+++ b/deva.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="deva.png" alt="">
-            <div id="btnbox">
+        <div id="contentbox">
+            <img src="deva.png" alt="" id="poster">
+            <br>
+            <div>
                 <a href="https://ia803207.us.archive.org/31/items/deva-2025-webrip-720p-hindi-aac-x264/Deva%20%282025%29%20WebRip%20720p%20Hindi%20AAC%20x264.mp4">
-                    <button>Watch Now</button>
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Deva
-            </div><br>
-            <div id="genre">
-                Action, Crime, Drama | 2h 36m | 2025
-            </div>
-            <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">A brilliant yet rebellious police officer uncovers a web of deceit and betrayal while investigating a high-profile case.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Sahid Kapoor</li>
-                        <li>Pooja Hegde</li>
-                        <li>Saadhika Syal</li>
-                        <li>Pravessh Rana</li>
-                        <li>Pavail Gulati, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+            <!-- <br><br>
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
