--- a/kgf1.html
+++ b/kgf1.html
@@ -6,42 +6,26 @@
     <title>K.G.F: Chapter 1</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="kgf1.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/gKizDojsdvs?si=YPce4DmK3HJpvjG5">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="kgf1.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/ULEQb_l-N08?si=ZWPrqNOsu6HWIlKI">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                K.G.F: Chapter 1
-            </div><br>
-            <div id="genre">
-                Action, Gangster, Crime, Thiller | 2h 34m | 2018
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">In the 1970s, a gangster named Rocky goes undercover as a slave to assassinate the owner of a notorious gold mine known as the Kolar Gold Fields.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Yash</li>
-                        <li>Srinidhi Shetty</li>
-                        <li>Ramachandra Raju</li>
-                        <li>Anant Nag</li>
-                        <li>Vasishta N. Simha, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf2.html">
+                        <img src="kgf2.png" alt="" class="parts">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
