--- a/kgf2.html
+++ b/kgf2.html
@@ -9,39 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="kgf2.png" alt="">
-            <div id="btnbox">
-                <a href="https://dn720402.ca.archive.org/0/items/k.-g.-f.-chapter.-2/K.G.F.Chapter.2.mp4">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="kgf2.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://dn720402.ca.archive.org/0/items/k.-g.-f.-chapter.-2/K.G.F.Chapter.2.mp4
+                ">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                K.G.F: Chapter 2
-            </div><br>
-            <div id="genre">
-                Action, Gangster, Crime, Thiller | 2h 46m | 2022
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">In the blood-soaked Kolar Gold Fields, Rocky's name strikes fear into his foes, while the government sees him as a threat to law and order. Rocky must battle threats from all sides for unchallenged supremacy.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Yash</li>
-                        <li>Sanjay Dutt</li>
-                        <li>Raveena Tandon</li>
-                        <li>Srinidhi Shetty</li>
-                        <li>Prakash Raj, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
