--- a/leo.html
+++ b/leo.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="leo.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/XNRiar5DOQQ?si=_kdrmbDY-uiNFgH7">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="leo.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/XNRiar5DOQQ">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Leo
-            </div><br>
-            <div id="genre">
-                Action, Drama, Crime, Thiller | 2h 44m | 2023
-            </div>
-            <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Parthiban is a mild-mannered cafe owner who fends off a gang of murderous thugs and gains attention from a drug cartel claiming he was once a part of them.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Joseph Vijay</li>
-                        <li>Sanjay Dutt</li>
-                        <li>Trisha Krishnan</li>
-                        <li>Arjun Sarja</li>
-                        <li>Priya Anand, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+            <!-- <br><br>
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
