--- a/live.html
+++ b/live.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="live.png" alt="">
-            <div id="btnbox">
+        <div id="contentbox">
+            <img src="live.png" alt="" id="poster">
+            <br>
+            <div>
                 <a href="https://drive.google.com/file/d/1tDPv_bgQaQiwX07fpVioEGf1nmSQofIS/view?usp=sharing">
-                    <button>Watch Now</button>
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Live
-            </div><br>
-            <div id="genre">
-                Thiller | 2h 5m | 2023
-            </div>
-            <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Follows Anna, who is a victim of fake news and Dr. Amala, who's also facing Cyber harassment. They come together to fight against the media mafia.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Mamta Mohandas</li>
-                        <li>Soubin Shahir</li>
-                        <li>Shine Tom Chacko</li>
-                        <li>Priya Prakash Varrier</li>
-                        <li>Krishna Prabha, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+            <!-- <br><br>
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
