--- a/salaar.html
+++ b/salaar.html
@@ -3,46 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salaar</title>
+    <title>Leo</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="salaar.png" alt="">
-            <div id="btnbox">
-                <a href=" https://dn721800.ca.archive.org/0/items/54l-44r-2023-hnd-south-dub-72p-1.4bg/54l44r%202023%20hnd%20south%20dub%2072p%201.4bg.mp4">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="salaar.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://dn721800.ca.archive.org/0/items/54l-44r-2023-hnd-south-dub-72p-1.4bg/54l44r%202023%20hnd%20south%20dub%2072p%201.4bg.mp4">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Salaar
-            </div><br>
-            <div id="genre">
-                Action, Crime, Drama, Thiller | 2h 55m | 2023
-            </div>
-            <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">The fate of a violently contested kingdom hangs on the fraught bond between two friends-turned-foes in this saga of power, bloodshed and betrayal.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Prabhas</li>
-                        <li>Karthikeya Dev</li>
-                        <li>Prithiviraj Sukumaran</li>
-                        <li>Shruti Haasan</li>
-                        <li>Jagapathi Babu, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+            <!-- <br><br>
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
