--- a/bato.html
+++ b/bato.html
@@ -3,45 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bato - Road to Death</title>
+    <title>Bato- Road to Death</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="bato.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/JBWAp83BWU8?si=HIT1U_csGMf8Ksl0">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="bato.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/JBWAp83BWU8?si=6hN9tK5d1tfu9qsw">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Bato - Road to Death
-            </div><br>
-            <div id="genre">
-                Drama, Thriller, Horror | 2h 0m | 32 Jestha,2081
-            </div>
-            <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">The film showcases the journey of three main characters Komal, a paramedic agent who is on a mission to deliver a Live Heart Case for Transplant on an ambulance, Tony is a Taxi Driver who rides Manjil a Filmmaker to his Destination to Dharan after hearing a tragic news about his mother.</p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Mithila Sharma</li>
-                        <li>Ashant Sharma</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Pasupati Rai</li>
-                        <li>Rakshya Thapa, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+            <!-- <br><br>
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
