--- a/chadke.html
+++ b/chadke.html
@@ -9,39 +9,22 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="chadke.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/VNT7oTNbvws?si=4tIrd-KszhfFus40">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="chadke.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/VNT7oTNbvws?si=wP4C_6G9IRBzOcMm">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Chhadke
-            </div><br>
-            <div id="genre">
-                Action, Crime | 2h 5m | 11 Falgun,2069
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Chhadke is a Nepalese film that tells the story of two best friends. The trio clarification needed all had dreams to fulfill 'when they grew up, ' but time and destiny seem to have other plans for them.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Saugat Malla</li>
-                        <li>Arpan Thapa</li>
-                        <li>Dayahang Rai</li>
-                        <li>Namrat Shrestha</li>
-                        <li>Bipin Karki, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
