--- a/chadke2.html
+++ b/chadke2.html
@@ -9,39 +9,22 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="chadke2.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/Sv54RX3Hv5Q?si=uTISBfdDp9URXTIH">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="chadke2.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/Sv54RX3Hv5Q?si=KDuNPFPX3XcUx3PG">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Chhadke 2.0
-            </div><br>
-            <div id="genre">
-                Action, Crime | 1h 30m | 19 Falgun,2079
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">'Chhadke 2.0' tells the story of a guy named Mendog, whose family gets killed by Gangsters of Manang while fetching YarsaGumba.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Anmol Kc</li>
-                        <li>Kamal Mani Nepal</li>
-                        <li>Robin Thapa</li>
-                        <li>Srijana Subba</li>
-                        <li>Devu Shrestha, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="chadke.html">
+                        <img src="chadke.png" alt="" class="parts">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
