--- a/dalbhattarkari.html
+++ b/dalbhattarkari.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="dalbhattarkari.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/NGkX3jzjKb0?si=S5EWdc3Jq4GseAaH">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="dalbhattarkari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/Jl9_MgLcVAg?si=iKZGkMWPyMxhOg63">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Dal Bhat Tarkari
-            </div><br>
-            <div id="genre">
-                Comedy, Drama | 2h 10m | 13 Baishak,2076
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">American Dream of a middle class family.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Hari Bamsha Acharya</li>
-                        <li>Niruta Singh</li>
-                        <li>Pushpa Khadka</li>
-                        <li>Anchal Sharma</li>
-                        <li>Barsha Raut, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+<!--             <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
