--- a/duinumbari.html
+++ b/duinumbari.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="duinumbari.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/lgnmYWl26SY?si=zJz2otK6cm-A0xee">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="duinumbari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/lgnmYWl26SY?si=RDZk_p9p86F8wUC5">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Dui Numberi
-            </div><br>
-            <div id="genre">
-                Drama | 2h 4m | 21 Asoj,2079
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Two friends Himal and Chhiring are amateur hunters. They do not have big dreams in their lives. But Himal has to fulfill his girlfriend Balika's dream, and for that he crosses the line of ethics. Meanwhile a stranger girl Ugyen's entry to the village changes the atmosphere of Chhiring's mindscape.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Saugat Malla</li>
-                        <li>Upasasna Singh Thakuri</li>
-                        <li>Ugyen Choden</li>
-                        <li>Buddhi Tamang, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+<!--             <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
