--- a/bato.html
+++ b/bato.html
@@ -17,15 +17,16 @@
                     <button>WATCH</button>
                 </a>
             </div>
-            <!-- <br><br>
+            <br><br>
             <h3>Parts</h3>
             <div id="parts">
-                <div>
+                None
+<!--                 <div>
                     <a href="kgf1.html">
                         <img src="kgf1.png" alt="" class="parts">
                     </a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </div>
     </div>
 </body>
