--- a/degreemaila.html
+++ b/degreemaila.html
@@ -18,14 +18,15 @@
                 </a>
             </div>
             <br><br>
-<!--             <h3>Parts</h3>
+            <h3>Parts</h3>
             <div id="parts">
-                <div>
+                None
+<!--                 <div>
                     <a href="chadke2.html">
                         <img src="chadke2.png" alt="" class="parts">
                     </a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </div>
     </div>
 </body>
