--- a/fullbari.html
+++ b/fullbari.html
@@ -10,7 +10,7 @@
 <body>
     <div id="content">
         <div id="contentbox">
-            <img src="duinumbari.png" alt="" id="poster">
+            <img src="fullbari.png" alt="" id="poster">
             <br>
             <div>
                 <a href="https://youtu.be/gBM4IwixICg?si=GYFOfjxRl0-BJj7j">
