--- a/jaari.html
+++ b/jaari.html
@@ -9,39 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="jaari.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/kQZq8KrtQJ0?si=MRX6pgYpSz_6Y5IE">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="jaari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/kQZq8KrtQJ0?si=Ni1ZMd24Ngcj8muS">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Jaari
-            </div><br>
-            <div id="genre">
-                Drama, Romance | 2h 1m | 1 Baishak,2080
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Set in the year 1995, after day-to-day arguments and fights between Namsang (Dayahang Rai) and his wife Hangma (Miruna Magar), she goes back to her parents house. She elopes with another man (Roydeep Shrestha), but eventually comes back to her husband Namsang when her family is not able to pay him compensation (Jaari) for her elopement. Hangma decides to pay it herself, but this time as his maid, since she cannot afford to pay any other form of compensation to him. The plot revolves around the struggles of Hangma in a male-dominated society.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Pushkar Gurung</li>
-                        <li>Kamal Mani Nepal</li>
-                        <li>Upasanba Nembang, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
