--- a/leo.html
+++ b/leo.html
@@ -17,15 +17,30 @@
                     <button>WATCH</button>
                 </a>
             </div>
-            <!-- <br><br>
+            <br><br>
             <h3>Parts</h3>
-            <div id="parts">
+            None
+<!--             <div id="parts">
                 <div>
                     <a href="kgf1.html">
                         <img src="kgf1.png" alt="" class="parts">
                     </a>
                 </div>
             </div> -->
+            <br><br>
+            <h3>Connected Films</h3>
+            <div id="parts">
+                <div>
+                    <a href="kaithi.html">
+                        <img src="kaithi.png" alt="" class="parts">
+                    </a>
+                </div>
+                <div>
+                    <a href="vikram.html">
+                        <img src="vikram.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
