--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
                         <img src="leo.png" alt="">
                     </a>
                 </div>
+                <div>
+                    <a href="vikram.html">
+                        <img src="vikram.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="kaithi.html">
+                        <img src="kaithi.png" alt="">
+                    </a>
+                </div>
             </div>    
         </div>
         <div id="hollywoodbox">
