--- a/animal.html
+++ b/animal.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leo</title>
+    <title>Animal</title>
     <link rel="stylesheet" href="detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <div id="contentbox">
-            <img src="salaar.png" alt="" id="poster">
+            <img src="animal.png" alt="" id="poster">
             <br>
             <div>
-                <a href="https://dn721800.ca.archive.org/0/items/54l-44r-2023-hnd-south-dub-72p-1.4bg/54l44r%202023%20hnd%20south%20dub%2072p%201.4bg.mp4">
+                <a href="https://drive.google.com/file/d/1PCe1OMl6-DSoEB-OsnTkfw47csi5pP2v/view?usp=sharing">
                     <button>WATCH</button>
                 </a>
             </div>
-            <!-- <br><br>
+            <br><br>
             <h3>Parts</h3>
             <div id="parts">
-                <div>
-                    <a href="kgf1.html">
-                        <img src="kgf1.png" alt="" class="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
                     </a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </div>
     </div>
 </body>
