--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                 </datalist>
             </div>
             <div class="films" id="Bollywood">
+                 <div>
+                    <a href="sikandar.html">
+                        <img src="sikandar.png" alt="">
+                    </a>
+                </div>
                 <div>
                     <a href="deva.html">
                         <img src="deva.png" alt="">
@@ -205,9 +210,24 @@
                         <img src="vikram.png" alt="">
                     </a>
                 </div>
+                 <div>
+                    <a href="marco.html">
+                        <img src="marco.png" alt="">
+                    </a>
+                </div>
+                 <div>
+                    <a href="animal.html">
+                        <img src="animal.png" alt="">
+                    </a>
+                </div>
                 <div>
                     <a href="kaithi.html">
                         <img src="kaithi.png" alt="">
+                    </a>
+                </div>
+                 <div>
+                    <a href="raone.html">
+                        <img src="raone.png" alt="">
                     </a>
                 </div>
             </div>    
