--- a/index.html
+++ b/index.html
@@ -75,28 +75,8 @@
                     </a>
                 </div>
                 <div>
-                    <a href="nangogaun.html">
-                        <img src="nango gaun.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="jaari.html">
-                        <img src="jaari.png" alt="">
-                    </a>
-                </div>
-                <div>
                     <a href="guleli.html">
                         <img src="guleli.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="duinumbari.html">
-                        <img src="duinumbari.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="degreemaila.html">
-                        <img src="degreemaila.png" alt="">
                     </a>
                 </div>
                 <div>
@@ -105,28 +85,18 @@
                     </a>
                 </div>
                 <div>
-                    <a href="chadke2.html">
-                        <img src="chadke2.png" alt="">
+                    <a href="degreemaila.html">
+                        <img src="degreemaila.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="chadke.html">
-                        <img src="chadke.png" alt="">
+                    <a href="duinumbari.html">
+                        <img src="duinumbari.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="fullbari.html">
-                        <img src="fullbari.png" alt="">
-                    </a>
-                </div>
-                 <div>
-                    <a href="hari.html">
-                        <img src="hari.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="mahapurush.html">
-                        <img src="mahapurush.png" alt="">
+                    <a href="nangogaun.html">
+                        <img src="nango gaun.png" alt="">
                     </a>
                 </div>
                 <div>
@@ -135,13 +105,43 @@
                     </a>
                 </div>
                 <div>
-                    <a href="dalbhattarkari">
-                        <img src="dalbhattarkari.png" alt="">
+                    <a href="mahapurush.html">
+                        <img src="mahapurush.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="jaari.html">
+                        <img src="jaari.png" alt="">
+                    </a>
+                </div>
+                 <div>
+                    <a href="fullbari.html">
+                        <img src="fullbari.png" alt="">
                     </a>
                 </div>
                 <div>
                     <a href="prasad.html">
                         <img src="prasad.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="dalbhattarkari.html">
+                        <img src="dalbhattarkari.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="hari">
+                        <img src="hari.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="chadke.html">
+                        <img src="chadke.png" alt="">
                     </a>
                 </div>
             </div>    
