--- a/bollywood.html
+++ b/bollywood.html
@@ -36,78 +36,63 @@
             </div>
             <div class="films" id="Bollywood">
                 <div>
-                    <a href="gharjwai.html">
-                        <img src="gharjwai.png" alt="">
+                    <a href="sikandar.html">
+                        <img src="sikandar.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="guleli.html">
-                        <img src="guleli.png" alt="">
+                    <a href="marco.html">
+                        <img src="marco.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="bato.html">
-                        <img src="bato.png" alt="">
+                    <a href="deva.html">
+                        <img src="deva.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="degreemaila.html">
-                        <img src="degreemaila.png" alt="">
+                    <a href="live.html">
+                        <img src="live.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="duinumbari.html">
-                        <img src="duinumbari.png" alt="">
+                    <a href="salaar.html">
+                        <img src="salaar.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="nangogaun.html">
-                        <img src="nango gaun.png" alt="">
+                    <a href="animal.html">
+                        <img src="animal.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="modibeni.html">
-                        <img src="modibeni.png" alt="">
+                    <a href="leo.html">
+                        <img src="leo.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="mahapurush.html">
-                        <img src="mahapurush.png" alt="">
+                    <a href="vikram.html">
+                        <img src="vikram.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="chadke2.html">
-                        <img src="chadke2.png" alt="">
+                    <a href="kgf2.html">
+                        <img src="kgf2.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="jaari.html">
-                        <img src="jaari.png" alt="">
+                    <a href="kaithi.html">
+                        <img src="kaithi.png" alt="">
                     </a>
                 </div>
                  <div>
-                    <a href="fullbari.html">
-                        <img src="fullbari.png" alt="">
+                    <a href="kgf1.html">
+                        <img src="kgf1.png" alt="">
                     </a>
                 </div>
                 <div>
-                    <a href="prasad.html">
-                        <img src="prasad.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="dalbhattarkari.html">
-                        <img src="dalbhattarkari.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="hari">
-                        <img src="hari.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="chadke.html">
-                        <img src="chadke.png" alt="">
+                    <a href="raone.html">
+                        <img src="raone.png" alt="">
                     </a>
                 </div>
             </div>    
